# quant_brain

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: API.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  REFACTOR_PLAN_pg_reader.md
infra/: redis.conf
infra/sql/: 001_base_tables.sql  002_derived_tables.sql  003_market_tables.sql  004_orders.sql
infra/systemd/: fastapi-web.service  openclaw-agent.service  quant-engine.service
openclaw/: agent_main.py  chat.py
openclaw/commands/: account.py  market.py  trade.py
quant_engine/: batch_update.py  config.py  redis_client.py
quant_engine/market/: __init__.py  distributor.py  fetcher.py  reader.py  snapshot.py  stream_consumer.py
quant_engine/order/: __init__.py  executor.py  order_status_consumer.py  state_machine.py
quant_engine/risk/: __init__.py  checker.py
scripts/: package.sh  setup.sh
tests/: test_api_routes.py  test_batch_update.py  test_integration.py  test_market_distributor.py  test_market_fetcher.py  test_market_snapshot.py  test_openclaw_commands.py  test_order_executor.py  test_order_state_machine.py  test_redis_client.py  test_risk_checker.py
web_backend/: __init__.py  config.py  db.py  main.py  schemas.py
web_backend/routes/: __init__.py  account.py  market.py  trading.py
